remove all references to curator. Only use kafka based workflows

--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,14 @@
     </contributors>
 
     <dependencies>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>27.0.1-jre</version>
+        </dependency>
+
+ <!--
         <dependency>
             <groupId>org.apache.curator</groupId>
             <artifactId>curator-recipes</artifactId>
@@ -130,7 +138,7 @@
             <version>${curator-version}</version>
             <scope>test</scope>
         </dependency>
-
+-->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
